--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
   "devDependencies": {
     "@11ty/eleventy": "^1.0.0"
+  },
+  "dependencies": {
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.49.7"
+  }
+  "scripts": {
+    "watch:sass": "sass --watch src/sass:public/css",
+    "build:sass": "sass src/sass:public/css",
+    "watch:eleventy": "elevennty --serve",
+    "build:eleventy": "eleventy",
+    "start": "npm-run-all build:sass --parallel watch:*",
+    "build": "npm-run-all build:*"
   }
 }
