--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-.pnpm-debug.log*
+# dependencies installed by npm
+node_modules
 
-# Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+# build artefacts
+public
+src/css
+social
 
-# Dependency directories
-node_modules/
+# secrets and errors
+.env
+.log
+
+# macOS related files
+.DS_Store
+
+#IDE
+.idea
