--- a/netlify.toml
+++ b/netlify.toml
@@ -15,3 +15,8 @@
     from = "/feed/"
     to = "/feed/feed.xml"
     status = 200
+    
+  [[redirects]]
+    from = "/*"
+    to = "/404.html"
+    status = 404
