--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   # Settings to use Netlify Identity as backend
   name: git-gateway
-  branch: master
+  branch: main
 
 # Add the route to your images, so Netlify CMS knows where to save uploads to.
 media_folder: "src/static/img"
