--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
   # Settings to use Netlify Identity as backend
-  name: git-gateway
+  name: github
+  repo: parth/site-revamp
   branch: main
 
 # Add the route to your images, so Netlify CMS knows where to save uploads to.
